src/objects/Credit_Information__c.object
<CustomObject>
    <description>Child object of account. Part of customer master. grouped by Credit Control area.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credit Information</relationshipLabel>
        <relationshipName>Credit_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Control_Area__c</fullName>
        <label>Credit Control Area</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR02</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Information_Compound_SFID__c</fullName>
        <description>This is the compound key that is made up of the Credit Control Area Id and the Accounts Involved Party Id.</description>
        <externalId>true</externalId>
        <label>Credit Information Compound SFID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <label>Credit Limit</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <label>Credit Rating</label>
        <picklist>
            <controllingField>Credit_Control_Area__c</controllingField>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ö</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deletion_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When an OBM has been fired that the record has been deleted the Deleted Flag will be set on the record to flag a logical delete.</description>
        <label>Deletion Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Payment_Index__c</fullName>
        <label>External Payment Index</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_PN_Synchronized_Date__c</fullName>
        <label>Last PN Synchronized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PN_Mark_As_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN_Mark_As_Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_ErrorReasonCode__c</fullName>
        <label>PN Synchronization ErrorReasonCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Synchronization_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronization Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN_Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PN Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <label>Credit Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Credit_Information_Compound_SFID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CI-{000000}</displayFormat>
        <label>Credit Info ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_edit_of_Account_field_after_create</fullName>
        <active>true</active>
        <description>Account is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( Account__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Account may not be updated. If you need to update Account please create a new Credit Information record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_edit_of_CCA_field_after_create</fullName>
        <active>true</active>
        <description>Credit Control Area is part of the integration compound key and may not be edited after the record has been created</description>
        <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED(  Credit_Control_Area__c  )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Credit_Control_Area__c</errorDisplayField>
        <errorMessage>Credit Control Area may not be updated. If you need to update Credit Control Area please create a new Credit Information record</errorMessage>
    </validationRules>
</CustomObject>